# aws-image-api

./: Cargo.toml  Dockerfile
awesomeProject/: main.go
rust-api/: Cargo.toml  Dockerfile
rust-api/src/: main.rs
src/: main.rs
