[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-sdk-s3 = "0.25.0"
aws-sdk-cloudfront = "0.25.0"
aws-config = "0.55.0"
aws-sdk-ssm = "0.25.0"
tokio = { version = "1.27.0", features = ["full"] }
tokio-tungstenite = "0.18.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tungstenite = "0.18.0"
futures = "0.3"
bytes = "1.4.0"
uuid = { version = "1.3.0",  features = ["v4"] }
actix-web = "4.3.1"
actix-multipart = "0.6.0"
rusoto_signature = "0.48.0"
dotenv = "0.15.0"
chrono = "0.4.24"
http = "0.2.9"
log = "0.4.14"
env_logger = "0.10.0"
cloudfront_sign = "0.2.1"